Fixed background image

--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -7,7 +7,7 @@
     <title>Translator</title>
     <style>
         body {
-            background-image: url('india-mumbai.png');
+            background-image: url('https://github.com/HVbajoria/Azure-AI-Text-Translator/assets/62978274/3b5098bd-0f30-44a7-ac45-2f788bd848a4');
             background-size: cover;
             color: black;
         }
